core/tooling/lsp/tests/snapshots/hover__hover_doc_comment.snap
---
source: core/tooling/lsp/tests/hover.rs
assertion_line: 17
expression: hover
---
Some(
    Hover {
        contents: Markup(
            MarkupContent {
                kind: Markdown,
                value: "```wrela\nfoo() -> Nothing\n```\n---\nThis is a documentation comment\nIt has multiple lines",
            },
        ),
        range: Some(
            Range {
                start: Position {
                    line: 3,
                    character: 7,
                },
                end: Position {
                    line: 3,
                    character: 10,
                },
            },
        ),
    },
)
