core/tooling/lsp/tests/snapshots/hover__hover_inferred_variable.snap
---
source: core/tooling/lsp/tests/hover.rs
expression: hover
---
Some(
    Hover {
        contents: Markup(
            MarkupContent {
                kind: Markdown,
                value: "```wrela\nx\n```",
            },
        ),
        range: Some(
            Range {
                start: Position {
                    line: 2,
                    character: 8,
                },
                end: Position {
                    line: 2,
                    character: 9,
                },
            },
        ),
    },
)
